# MissionPlanner-Scripts

./: .gitignore  Dockerfile  Insomnia_spec.json  LICENSE  Mission-Planner-Scripts-Postman.postman_collection.json  README.md  api_spec.yml  generated.txt  nohup.out  postman_collection.json  pyproject.toml  setup.py  spec.postman_collection  spec.postman_collection.json  workspace.postman_globals.json
.github/: dependabot.yml
.github/workflows/: django-workflow.yml  python-app.yml  test.yml
.postman/: api  api_bf1d4fce-d19b-4bba-a4f6-9e0b6be96e47
src/: aeac_scan_test.py  client.py  main.py  old_test_client.py  old_test_fence.py  requirements.txt  test.py  test_client.py  test_driver.py
src/common/: conversion.py  sharedobject.py  wpqueue.py
src/gcom_handler/: gcomhandler.py  main.py
src/mps_server/: conversion.py  missions.py  server.py
src/server/: custom_thread.py  gcomhandler.py  mps_server.py  socket_handler.py  status_wsclient.py
src/server/common/: conversion.py  encoders.py  missions.py  sharedobject.py  status.py  wpqueue.py
src_pymav/: main.py
src_pymav/server/: httpserver.py
src_pymav/server/common/: conversion.py  sharedobject.py  status.py  wpqueue.py
src_pymav/server/features/: aeac_scan.py  aeac_water_delivery.py  camera.py
src_pymav/server/operations/: change_modes.py  get_info.py  land.py  queue.py  takeoff.py
src_pymav/server/utilities/: connect_to_sysid.py  request_message_streaming.py
src_pymav/utilities/: wait_for_position_aiding.py
testing/: socket.js  waypoint_generator.py
testing/diversion_tests/test1/: diversion.json  queue.json
testing/diversion_tests/test2/: diversion.json  queue.json
(+2 files in other folders)
