[tool.poetry]
name = "missionplanner-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "missionplanner_scripts"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
wsgiserver = "^1.3"
shapely = "^2.0.1"
matplotlib = "^3.7.1"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
