[tool.poetry]
name = "missionplanner-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "missionplanner_scripts"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
wsgiserver = "^1.3"
shapely = "^2.0.1"
matplotlib = "^3.7.1"
flask-socketio = "^5.3.6"
gevent = "^23.9.1"
gevent-websocket = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
