[tool.poetry]
name = "missionplanner-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "missionplanner_scripts"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
wsgiserver = "^1.3"
shapely = "^2.0.1"
matplotlib = "^3.7.1"
pytest = "^7.4.2"
flask-socketio = "^5.3.6"
gevent = "^23.9.1"
gevent-websocket = "^0.10.1"
requests = "^2.31.0"
python-socketio = {extras = ["client"], version = "^5.11.2"}
pymavlink = "^2.4.41"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
